--- a/src/e190_bot/CMakeLists.txt
+++ b/src/e190_bot/CMakeLists.txt
@@ -71,7 +71,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate added messages and services with any dependencies listed here
  generate_messages(
    DEPENDENCIES
-   geometry_msgs#   std_msgs
+   geometry_msgs
+   std_msgs
  )
 
 ################################################
