--- a/src/e190_bot/params/camera_info/camera_info.yaml
+++ b/src/e190_bot/params/camera_info/camera_info.yaml
@@ -1,20 +1,20 @@
 image_width: 1280
 image_height: 720
-camera_name: camera
+camera_name: narrow_stereo
 camera_matrix:
   rows: 3
   cols: 3
-  data: [972.462056, 0, 626.015938, 0, 968.579713, 351.732596, 0, 0, 1]
+  data: [1127.395501, 0.000000, 652.963648, 0.000000, 1138.716005, 373.355313, 0.000000, 0.000000, 1.000000]
 distortion_model: plumb_bob
 distortion_coefficients:
   rows: 1
   cols: 5
-  data: [-0.008558, -0.030782, -0.00176, -0.007929, 0]
+  data: [0.008896, -0.061188, 0.005465, -0.001868, 0.000000]
 rectification_matrix:
   rows: 3
   cols: 3
-  data: [1, 0, 0, 0, 1, 0, 0, 0, 1]
+  data: [1.000000, 0.000000, 0.000000, 0.000000, 1.000000, 0.000000, 0.000000, 0.000000, 1.000000]
 projection_matrix:
   rows: 3
   cols: 4
-  data: [960.885803, 0, 614.441647, 0, 0, 968.321716, 350.316129, 0, 0, 0, 1, 0]
+  data: [1124.539062, 0.000000, 651.114950, 0.000000, 0.000000, 1139.860474, 375.651684, 0.000000, 0.000000, 0.000000, 1.000000, 0.000000]
