--- a/src/e190_bot/package.xml
+++ b/src/e190_bot/package.xml
@@ -49,6 +49,9 @@
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
 
+  <build_depend>python-scipy</build_depend>
+  <run_depend>python-scipy</run_depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
